Fix wrangler.toml configuration format

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,12 @@
+name = "stacked-signatures"
+main = "./.cloudflare/workers/script.js"
+compatibility_date = "2025-05-13"
+
 [site]
 bucket = "./dist"
-
-[[routes]]
-pattern = "/functions/*"
-script = "./functions/index.js"
 
 [build]
 command = "./build.sh"
 
-[build.upload]
-format = "service-worker"
+[triggers]
+crons = []
